--- a/content/projects/f-10.md
+++ b/content/projects/f-10.md
@@ -1,9 +1,9 @@
 +++
-title = "F/10"
+title = "F1/10 Autonomous Racing"
 +++
 
 
-# STS 4500 - F1/10 Autonomous Racing - Principles of Perception, Planning, and Control
+# CS 4500 - F1/10 Autonomous Racing - Principles of Perception, Planning, and Control
 
 ## Overview
 
@@ -11,5 +11,5 @@ During the 2023 Fall Semester, I took [F1/10 Autonomous Racing - Principles of P
 
 ## Videos
 
-[Race Day](https://www.youtube.com/watch?v=ubuSchuMl1w)
-[SLAM Localization](https://www.youtube.com/watch?v=Tj1PfByRtds)
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/ubuSchuMl1w?si=AUiGLudDVebZUr2F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Tj1PfByRtds?si=4Hw8TI6L1jY2nEEF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
